--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <shared-search-box></shared-search-box>
+        <shared-search-box (onValue)="searchByCapital($event)"></shared-search-box>
     </div>
 </div>
 
@@ -11,6 +11,10 @@
 
 <div class="row">
     <div class="col">
-        Tabla de Resultados
+        <ul>
+            <li *ngFor="let i of countries">
+                {{i.capital}} - {{i.population}}
+            </li>
+        </ul>
     </div>
 </div>
