--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -11,10 +11,7 @@
 
 <div class="row">
     <div class="col">
-        <ul>
-            <li *ngFor="let i of countries">
-                {{i.capital}} - {{i.population}}
-            </li>
-        </ul>
+        <hr>
+        <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
