--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -7,11 +7,10 @@
     </div>
 </div>
 
-<hr>
-
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
         <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
